<resources>
    <string name="app_name">SoPay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_image">welcome image</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="languages">Language</string>
    <string name="welcome">Welcome to SoPay</string>
    <string name="choose_language">Choose a language to get started</string>
    <string name="choose_phone_carrier">Choose Carrier:</string>
    <string name="english">English</string>
    <string name="somali">Somali</string>
    <string name="enter_your_phone_number">Enter your mobile phone number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="use_the_number_on_this_phone">Use the number on this phone.</string>
    <string name="region_country_code">+1</string>
    <string name="Continue">Continue</string>
    <string name="phone_number">Phone number</string>
    <string name="done">Done</string>
    <string name="empty"> </string>
    <string name="carrier_region">Carrier Region:</string>
    <string name="select_from_list">Select from list</string>
    <string name="verify_number">Verify your number</string>
    <string name="otp_sent_message">We\'ve sent a six digit activation code by SMS text message to </string>
    <string name="waiting_otp">Waiting for activation code… </string>
    <string name="enter_activation_code">Enter activation code</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="how_people_will_see_you_on_sopay">How people will see you on SoPay</string>

    <!-- Facebook SDK -->
    <string name="facebook_app_id">2060161590882863</string>
    <string name="fb_login_protocol_scheme">fb2060161590882863</string>
    <string name="or_use_your_email">or use your email</string>
    <string name="name_company_com">name@company.com</string>
    <string name="you_re_safe_with_sopay">You\'re safe with SoPay</string>
    <string name="choose_screen_lock_or_sopay_pin">Choose screen lock or SoPay PIN</string>
    <string name="use_your_screen_lock">Use your screen lock</string>
    <string name="create_sopay_pin">Create SoPay PIN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>

</resources>
