<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        style="@style/AppBarLayout">

        <android.support.design.widget.CollapsingToolbarLayout
            app:toolbarId="@+id/toolbar"
            style="@style/CollapsingToolbarLayout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolbarLayout" />

            <TextView
                style="@style/TextViewAppBarTitle"
                android:text="@string/welcome" />

            <TextView
                style="@style/TextViewAppBarSubhead"
                android:text="@string/choose_language" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        style="@style/SignupConstraintLayoutBody"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        tools:layout_editor_absoluteY="196dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckedTextView
                android:id="@+id/EnglishCheckedTV"
                style="@style/CheckedTextView"
                android:checkMark="@drawable/ic_check_black_24dp"
                android:checked="true"
                android:text="@string/english"
                android:textColor="@color/colorPrimary" />

            <CheckedTextView
                android:id="@+id/SomaliCheckedTV"
                style="@style/CheckedTextView"
                android:checked="false"
                android:text="@string/somali"
                android:textColor="@color/textBlackSecondaryColor" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
