<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        style="@style/AppBarLayout">

        <android.support.design.widget.CollapsingToolbarLayout
            app:toolbarId="@+id/toolbar"
            style="@style/CollapsingToolbarLayout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolbarLayout" />

            <TextView
                style="@style/TextViewAppBarTitle"
                android:text="@string/you_re_safe_with_sopay" />

            <TextView
                style="@style/TextViewAppBarSubhead"
                android:text="@string/choose_screen_lock_or_sopay_pin" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/ProgressBar"
                android:progress="3" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        style="@style/SignupConstraintLayoutBody"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        tools:layout_editor_absoluteY="196dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:checkedButton="@+id/app_pin_radioButton">

            <RadioButton
                android:id="@+id/screen_lock_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_size_medium_16dp"
                android:layout_marginTop="@dimen/margin_padding_size_medium_16dp"
                android:text="@string/use_your_screen_lock"
                android:textColor="@color/textDisabledHintBlackColor"
                android:textSize="@dimen/text_app_bar_title_medium_20sp" />

            <RadioButton
                android:id="@+id/app_pin_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_size_medium_16dp"
                android:layout_marginTop="@dimen/margin_padding_size_medium_16dp"
                android:checked="true"
                android:text="@string/create_sopay_pin"
                android:textColor="@color/textDisabledHintBlackColor"
                android:textSize="@dimen/text_app_bar_title_medium_20sp" />

        </RadioGroup>

        <Button
            android:id="@+id/continueButton"
            style="@style/PrimaryAccentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/Continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>