<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        style="@style/AppBarLayout">

        <android.support.design.widget.CollapsingToolbarLayout
            app:toolbarId="@+id/toolbar"
            style="@style/CollapsingToolbarLayout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolbarLayout" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/ProgressBar"
                android:progress="1" />

            <TextView
                style="@style/TextViewAppBarTitle"
                android:text="@string/enter_your_phone_number" />

            <TextView
                style="@style/TextViewAppBarSubhead"
                android:text="@string/use_the_number_on_this_phone" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        style="@style/SignupConstraintLayoutBody"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        tools:layout_editor_absoluteY="196dp">


        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:textColor="@color/textBlackPrimaryColor"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_size_medium_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carrierSpinner" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimaryLight"
            android:enabled="false"
            android:text="@string/sign_up"
            android:textColor="@color/textDisabledHintWhiteColor"
            android:theme="@style/PrimaryButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

        <TextView
            android:id="@+id/carrierRegionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:text="@string/carrier_region"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textColor="@color/textBlackPrimaryColor"
            app:layout_constraintBottom_toBottomOf="@+id/carrierSpinner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/carrierSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintStart_toEndOf="@+id/carrierRegionTextView"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>
