<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        style="@style/AppBarLayout">

        <android.support.design.widget.CollapsingToolbarLayout
            app:toolbarId="@+id/toolbar"
            style="@style/CollapsingToolbarLayout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolbarLayout" />

            <TextView
                style="@style/TextViewAppBarTitle"
                android:text="@string/verify_number" />

            <TextView
                style="@style/TextViewAppBarSubhead"
                android:text="@string/otp_sent_message" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        style="@style/SignupConstraintLayoutBody"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        tools:layout_editor_absoluteY="196dp">

        <TextView
            android:id="@+id/enterActivationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/enter_activation_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/textBlackPrimaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/activation_number_EditText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="true"
            android:inputType="number"
            android:maxLength="6"
            android:backgroundTint="@color/colorAccent"
            android:hapticFeedbackEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterActivationCode" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/waiting_otp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/textDisabledHintBlackColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activation_number_EditText" />


    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
